# Routes/AdminRoutes.js
@@ -5,7 +5,18 @@ const auth = require('../middleware/auth')
 
 router.get('/users',AdminController.getUsers)
 router.delete('/user',auth,AdminController.deleteUser)
+router.put('/promote',auth,AdminController.promoteUserToAdmin)
+
 router.delete('/dungeon',auth,AdminController.deleteDungeons)
+router.put('/dungeon',auth,AdminController.updateDungeons)
+
 router.delete('/histories',auth,AdminController.deleteHistories)
+router.put('/histories',auth,AdminController.updateHistories)
+
+router.delete('/classes',auth,AdminController.deleteClass)
+router.put('/classes',auth,AdminController.updateClass)
+
+router.delete('/skill',auth,AdminController.deleteSkill)
+router.put('/skill',auth,AdminController.updateSkill)
 
 module.exports = router
