# Routes/HistoryRoutes.js
@@ -4,6 +4,7 @@ const HistoryController = require('../Controllers/HistoryController')
 const auth = require('../middleware/auth')
 
 router.get('/',HistoryController.getHistoryAll)
+router.get('/:id',HistoryController.getByID)
 router.post('/',auth,HistoryController.postHistory)
 router.get('/:name',HistoryController.getPatch)
 
